--- a/index.html
+++ b/index.html
@@ -417,357 +417,15 @@
             </div>
             <div class="view view-init tab" id="tab-4">
                <div class="page">
-                  <div class="navbar navbar-large">
-                     <div class="navbar-bg"></div>
-                     <div class="navbar-inner">
-                        <div class="left">
-                           <a href="/settings/" class="link icon-only navbar-profile">
-                           <img src="img/avatars/small-avatar.jpg" alt="" />
-                           </a>
-                        </div>
-                        <div class="title">Components</div>
-                        <div class="title-large">
-                           <div class="title-large-text">Components</div>
-                        </div>
-                        <div class="right">
-                           <a href="#" class="link icon-only switch-theme">
-                           <i class="icon f7-icons">moon_stars</i>
-                           </a>
-                           <a href="/notifications/" class="link icon-only">
-                           <i class="icon f7-icons">
-                           bell
-                           <span class="badge bg-color-primary">5</span>
-                           </i>
-                           </a>
-                        </div>
-                     </div>
-                  </div>
                   <div class="page-content">
-                     <div class="light-gray-title">General</div>
-                     <div
-                        class="list links-list colored-icons-list list-outline list-dividers full-width"
-                        >
-                        <ul>
-                           <li>
-                              <a href="/accordion/">
-                                 <div class="colored-icon green">
-                                    <i class="icon f7-icons"
-                                       >arrowtriangle_down_square_fill</i
-                                       >
-                                 </div>
-                                 Accordion
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/badge/">
-                                 <div class="colored-icon green">
-                                    <i class="icon f7-icons">app_badge_fill</i>
-                                 </div>
-                                 Badge / Tag
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/button/">
-                                 <div class="colored-icon green">
-                                    <i class="icon f7-icons">rectangle_grid_1x2_fill</i>
-                                 </div>
-                                 Button
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/preloader/">
-                                 <div class="colored-icon green">
-                                    <i class="icon f7-icons"
-                                       >arrow_2_circlepath_circle_fill</i
-                                       >
-                                 </div>
-                                 Preloader
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/progress-bar/">
-                                 <div class="colored-icon green">
-                                    <i class="icon f7-icons">minus_rectangle_fill</i>
-                                 </div>
-                                 Progress Bar
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="light-gray-title">Forms</div>
-                     <div
-                        class="list links-list colored-icons-list list-outline list-dividers full-width"
-                        >
-                        <ul>
-                           <li>
-                              <a href="/checkbox/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons">checkmark_square_fill</i>
-                                 </div>
-                                 Checkbox
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/picker/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons">list_bullet_below_rectangle</i>
-                                 </div>
-                                 Picker
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/radio/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons">checkmark_alt_circle_fill</i>
-                                 </div>
-                                 Radio
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/range-slider/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons"
-                                       >slider_horizontal_below_rectangle</i
-                                       >
-                                 </div>
-                                 Range Slider
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/stepper/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons">plusminus_circle_fill</i>
-                                 </div>
-                                 Stepper
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/text-input/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons">textbox</i>
-                                 </div>
-                                 Text Input
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/toggle-button/">
-                                 <div class="colored-icon blue">
-                                    <i class="icon f7-icons"
-                                       >square_fill_line_vertical_square</i
-                                       >
-                                 </div>
-                                 Toggle Button
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="light-gray-title">Cards</div>
-                     <div
-                        class="list links-list colored-icons-list list-outline list-dividers full-width"
-                        >
-                        <ul>
-                           <li>
-                              <a href="/card/">
-                                 <div class="colored-icon red">
-                                    <i class="icon f7-icons">minus_rectangle_fill</i>
-                                 </div>
-                                 Card
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/card-footer/">
-                                 <div class="colored-icon red">
-                                    <i class="icon f7-icons">rectangle_dock</i>
-                                 </div>
-                                 Card With Footer
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/card-big-footer/">
-                                 <div class="colored-icon red">
-                                    <i class="icon f7-icons">app_fill</i>
-                                 </div>
-                                 Card With Big Footer
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="light-gray-title">Sliders</div>
-                     <div
-                        class="list links-list colored-icons-list list-outline list-dividers full-width"
-                        >
-                        <ul>
-                           <li>
-                              <a href="/slider-cards/">
-                                 <div class="colored-icon yellow">
-                                    <i class="icon f7-icons">minus_rectangle_fill</i>
-                                 </div>
-                                 Card Slider
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/slider-cards-footer/">
-                                 <div class="colored-icon yellow">
-                                    <i class="icon f7-icons">rectangle_dock</i>
-                                 </div>
-                                 Card With Footer Slider
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/slider-authors/">
-                                 <div class="colored-icon yellow">
-                                    <i class="icon f7-icons">person_3_fill</i>
-                                 </div>
-                                 Author Slider
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/slider-categories/">
-                                 <div class="colored-icon yellow">
-                                    <i class="icon f7-icons">square_grid_3x2_fill</i>
-                                 </div>
-                                 Category Slider
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/slider-albums/">
-                                 <div class="colored-icon yellow">
-                                    <i class="icon f7-icons">music_albums_fill</i>
-                                 </div>
-                                 Album Slider
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/slider-movies/">
-                                 <div class="colored-icon yellow">
-                                    <i class="icon f7-icons">film_fill</i>
-                                 </div>
-                                 Movie Slider
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="light-gray-title">Lists</div>
-                     <div
-                        class="list links-list colored-icons-list list-outline list-dividers full-width"
-                        >
-                        <ul>
-                           <li>
-                              <a href="/list/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">list_number_rtl</i>
-                                 </div>
-                                 List
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/list-icon/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">list_dash</i>
-                                 </div>
-                                 List With Icon
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/event-list/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">calendar_today</i>
-                                 </div>
-                                 Event List
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/post-list/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">rectangle_grid_1x2_fill</i>
-                                 </div>
-                                 Post List
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/stocks/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">graph_square_fill</i>
-                                 </div>
-                                 Stocks
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/author-list/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">person_2_fill</i>
-                                 </div>
-                                 Author List
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/album-list/">
-                                 <div class="colored-icon purple">
-                                    <i class="icon f7-icons">music_albums_fill</i>
-                                 </div>
-                                 Album List
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="light-gray-title">Blocks</div>
-                     <div
-                        class="list links-list colored-icons-list list-outline list-dividers full-width"
-                        >
-                        <ul>
-                           <li>
-                              <a href="/rating/">
-                                 <div class="colored-icon pink">
-                                    <i class="icon f7-icons">star_lefthalf_fill</i>
-                                 </div>
-                                 Rating
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/ticket/">
-                                 <div class="colored-icon pink">
-                                    <i class="icon f7-icons">ticket_fill</i>
-                                 </div>
-                                 Ticket
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/history-timeline/">
-                                 <div class="colored-icon pink">
-                                    <i class="icon f7-icons">list_bullet_indent</i>
-                                 </div>
-                                 History Timeline
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/information-block/">
-                                 <div class="colored-icon pink">
-                                    <i class="icon f7-icons">exclamationmark_square_fill</i>
-                                 </div>
-                                 Information
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/link-banner/">
-                                 <div class="colored-icon pink">
-                                    <i class="icon f7-icons">link_circle_fill</i>
-                                 </div>
-                                 Link Banner
-                              </a>
-                           </li>
-                           <li>
-                              <a href="/comments/">
-                                 <div class="colored-icon pink">
-                                    <i class="icon f7-icons"
-                                       >bubble_left_bubble_right_fill</i
-                                       >
-                                 </div>
-                                 Comments
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                  </div>
+    <h1>Ajandek</h1>
+    <div class="information-block">
+      <img src="img/cards/offer.png" alt="">
+      <h2>Kedvezmény!</h2>
+      <p style="text-align: center;">Fedezd fel az új lehetőséget, hogy te lehess az, aki kedves ismerőseit a legjobb élményekhez vezeti! <br/>Ha Te ajánlod barátaidnak, hogy apartmanunkba látogassanak el, és ők az ajánlásodra érkeznek, akkor neked a következő foglaláskor 10%-os kedvezmény jár. :)</p>
+    </div>
+   
+  </div>
                </div>
             </div>
             <div class="view view-init tab" id="tab-5">
@@ -981,6 +639,10 @@
                   <a href="#tab-3" class="tab-link">
                   <i class="icon f7-icons">camera_on_rectangle</i>
                   <span class="tabbar-label">Látnivalók</span>
+                  </a>
+                  <a href="#tab-4" class="tab-link">
+                  <i class="icon f7-icons">gift</i>
+                  <span class="tabbar-label">Ajándék</span>
                   </a>
                   <!-- <a href="#tab-4" class="tab-link">
                      <i class="icon f7-icons">calendar</i>
