--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                      </div>
                      <p>Közvetlen közelünkben található egy kényelmes sarki üzlet, ahol minden, amire szükséged lehet, kézre áll.<br/>  Az élelmiszerektől kezdve a vegyi árukig, itt mindent megtalálsz egy helyen. Praktikus és gyors vásárlási lehetőség mindennapi szükségleteid kielégítéséhez.</p>
                      <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron">
-                        <i class="icon f7-icons">logo_google</i>
+                        <i class="icon f7-icons">map_pin_ellipse</i>
                         <div class="link-banner-text">
                            <div class="link-banner-title">Útvonal tervezés</div>
                            <div class="link-banner-subtitle">Google térképen</div>
@@ -125,7 +125,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Pálya Bisztró</h2>
+                           <h2 >Pálya Bisztró</h2>
                            <p style="margin: 0px !important; padding-top: 10px;">
                               Legjobb hangulat, legfinomabb ételek, leggyorsabb kiszolgálás! :)
                            </p>
@@ -140,7 +140,7 @@
                            Kérjük, mutasd meg a pincérnek a fizetéskor, hogy érvényesíteni tudjuk a kedvezményt.
                         </p>
                         <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/P%C3%A1lya+Bisztr%C3%B3,+Strada+Stadionului,+Gheorgheni/@46.7231229,25.5100493,13z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aed78ae555197:0x75488a777577dda8!2m2!1d25.5933338!2d46.7266957!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                        <i class="icon f7-icons">logo_google</i>
+                        <i class="icon f7-icons">map_pin_ellipse</i>
                         <div class="link-banner-text">
                            <div class="link-banner-title">Útvonal tervezés</div>
                            <div class="link-banner-subtitle">Google térképen</div>
@@ -163,7 +163,7 @@
                            </p>
                         </div>
                         <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/P%C3%A1lya+Bisztr%C3%B3,+Strada+Stadionului,+Gheorgheni/@46.7231229,25.5100493,13z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aed78ae555197:0x75488a777577dda8!2m2!1d25.5933338!2d46.7266957!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                        <i class="icon f7-icons">logo_google</i>
+                        <i class="icon f7-icons">map_pin_ellipse</i>
                         <div class="link-banner-text">
                            <div class="link-banner-title">Útvonal tervezés</div>
                            <div class="link-banner-subtitle">Google térképen</div>
@@ -208,7 +208,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.medveles.eu/" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -232,7 +232,55 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Babusgat%C3%B3+%C3%81llatsimogat%C3%B3+%C3%A9s+%C3%81llatpark,+DJ138,+Sub+Cetate/@46.560855,25.3099898,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474b1fa38ed80661:0xe561b7ee1fed5480!2m2!1d25.3795171!2d46.4207367!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="card">
+                        <div class="card-image">
+                           <img
+                              src="img/cards/bob.jpeg"
+                              alt=""
+                              class="card-big-footer-image"
+                              style="height: 230px !important;"
+                              />
+                        </div>
+                        <div class="card-footer card-big-footer">
+                           <h2 style="text-align: center;">Bobpálya - Gyilkostó</h2>
+                           <a target="_blank" href="https://www.facebook.com/boblacurosu" class="button button-fill button-round color-dark external">
+                           További információ
+                           <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Bob+Lacu+Rosu,+Lacu+Roșu/@46.7418264,25.4625236,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474a950fa8c4b957:0xe520027114ee003!2m2!1d25.7514375!2d46.7798125!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">map_pin_ellipse</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="card">
+                        <div class="card-image">
+                           <img
+                              src="img/cards/lolo.jpeg"
+                              alt=""
+                              class="card-big-footer-image"
+                              style="height: 230px !important;"
+                              />
+                        </div>
+                        <div class="card-footer card-big-footer">
+                           <h2 style="text-align: center;">Kalandpark - Gyilkostó</h2>
+                           <a target="_blank" href="https://lolopark.ro/hu/" class="button button-fill button-round color-dark external">
+                           További információ
+                           <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/LOLO+Park+Resort,+Lacu+Roșu/@46.7462266,25.4840468,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474a9768e570484b:0xe4fdc688eaeaf57e!2m2!1d25.7904589!2d46.791483!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -257,7 +305,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/46.7006057,25.503091/@46.700568,25.5031636,17.15z/data=!4m2!4m1!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -281,7 +329,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/L%C3%A1z%C3%A1r+Kast%C3%A9ly,+L%C4%83zarea/@46.725158,25.4982936,14z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aed40161b2619:0xf6f0ed61417b2f77!2m2!1d25.5304983!2d46.7491115!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -305,7 +353,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Cs%C3%ADksomly%C3%B3i+kegytemplom,+Strada+Sz%C3%A9k,+Miercurea+Ciuc/@46.5494855,25.3358263,10z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474ad5ed7389df25:0xec324774b99eb0be!2m2!1d25.8250097!2d46.3786333!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -324,13 +372,13 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2 style="text-align: center;">Gyilkos-tó</h2>
+                           <h2 style="text-align: center;">Gyilkostó</h2>
                            <a href="/gyilkos-to/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Gyilkos-t%C3%B3/@46.7454622,25.4823816,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474a95e2cc334d57:0x57aa7b63bf4008fa!2m2!1d25.7865587!2d46.7899532!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -354,7 +402,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Szent+Anna-t%C3%B3/@46.4076318,24.9806177,9z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x40b4cf226c08fed5:0x506ccb7c82fde2c3!2m2!1d25.8876047!2d46.1265204!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -378,7 +426,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Pe%C5%9Ftera+%C5%9Eug%C4%83u+-+S%C3%BAg%C3%B3-barlang/@46.691327,25.4239669,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aea65f991fbbb:0x64ea7416051ea49!2m2!1d25.6735468!2d46.6821118!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -402,7 +450,7 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Parajdi+S%C3%B3b%C3%A1nya,+Strada+Minei,+Praid/@46.6267153,24.9844724,10z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474afe3481553b9b:0x86ed295f62b79ad6!2m2!1d25.1205556!2d46.5508333!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                           <i class="icon f7-icons">logo_google</i>
+                           <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
                               <div class="link-banner-subtitle">Google térképen</div>
@@ -420,7 +468,7 @@
     <div class="information-block">
       <img src="img/cards/offer.png" alt="">
       <h2>Kedvezmény!</h2>
-      <p style="text-align: center;">Fedezd fel az új lehetőséget, hogy te lehess az, aki kedves ismerőseit a legjobb élményekhez vezeti! <br/>Ha Te ajánlod barátaidnak, hogy apartmanunkba látogassanak el, és ők az ajánlásodra érkeznek, akkor neked a következő foglaláskor 10%-os kedvezmény jár. :)</p>
+      <p>Fedezd fel az új lehetőséget, hogy te lehess az, aki kedves ismerőseit a legjobb élményekhez vezeti! <br/>Ha Te ajánlod barátaidnak, hogy apartmanunkba látogassanak el, és ők az ajánlásodra érkeznek, akkor neked a következő foglaláskor 10%-os kedvezmény jár. :)</p>
     </div>
     <hr/>
     <div class="card">
