--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2 style="text-align: center;">Bobpálya - Gyilkostó</h2>
+                           <h2 style="text-align: center;">Bobpálya</h2>
                            <a target="_blank" href="https://www.facebook.com/boblacurosu" class="button button-fill button-round color-dark external">
                            További információ
                            <i class="icon f7-icons">arrow_right</i>
@@ -274,12 +274,36 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2 style="text-align: center;">Kalandpark - Gyilkostó</h2>
+                           <h2 style="text-align: center;">Kalandpark</h2>
                            <a target="_blank" href="https://lolopark.ro/hu/" class="button button-fill button-round color-dark external">
                            További információ
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/LOLO+Park+Resort,+Lacu+Roșu/@46.7462266,25.4840468,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474a9768e570484b:0xe4fdc688eaeaf57e!2m2!1d25.7904589!2d46.791483!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">map_pin_ellipse</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="card">
+                        <div class="card-image">
+                           <img
+                              src="img/cards/gokart.jpeg"
+                              alt=""
+                              class="card-big-footer-image"
+                              style="height: 230px !important;"
+                              />
+                        </div>
+                        <div class="card-footer card-big-footer">
+                           <h2 style="text-align: center;">Gokart</h2>
+                           <a target="_blank" href="https://www.facebook.com/zetekarting/" class="button button-fill button-round color-dark external">
+                           További információ
+                           <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Zete+Karting,+Sub+Cetate,+Zetea/@46.563751,25.3135248,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474b1f05e5a80c3b:0x7d8d46e4bd6a2f3!2m2!1d25.3894487!2d46.4257939!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
                            <i class="icon f7-icons">map_pin_ellipse</i>
                            <div class="link-banner-text">
                               <div class="link-banner-title">Útvonal tervezés</div>
